# tg_word_count

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
