[package]
name = "tg_word_search"
version = "0.1.0"
edition = "2021"

[dependencies]
grammers-client = { git = "https://github.com/Lonami/grammers" }
tokio = { version = "1.40.0", default-features = false, features = [
    "signal",
] }
simple_logger = { version = "5.0.0", default-features = false, features = [
    "colors",
] }
log = "0.4.22"
